source/grammar/StlParser.cpp

// Generated from StlParser.g4 by ANTLR 4.8


#include "StlParserVisitor.h"

#include "StlParser.h"


using namespace antlrcpp;
using namespace grammar;
using namespace antlr4;

StlParser::StlParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

StlParser::~StlParser() {
  delete _interpreter;
}

std::string StlParser::getGrammarFileName() const {
  return "StlParser.g4";
}

const std::vector<std::string>& StlParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& StlParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- StlfileContext ------------------------------------------------------------------

StlParser::StlfileContext::StlfileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

StlParser::StlSpecificationContext* StlParser::StlfileContext::stlSpecification() {
  return getRuleContext<StlParser::StlSpecificationContext>(0);
}

tree::TerminalNode* StlParser::StlfileContext::EOF() {
  return getToken(StlParser::EOF, 0);
}


size_t StlParser::StlfileContext::getRuleIndex() const {
  return StlParser::RuleStlfile;
}


antlrcpp::Any StlParser::StlfileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StlParserVisitor*>(visitor))
    return parserVisitor->visitStlfile(this);
  else
    return visitor->visitChildren(this);
}

StlParser::StlfileContext* StlParser::stlfile() {
  StlfileContext *_localctx = _tracker.createInstance<StlfileContext>(_ctx, getState());
  enterRule(_localctx, 0, StlParser::RuleStlfile);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    stlSpecification();
    setState(41);
    match(StlParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StlSpecificationContext ------------------------------------------------------------------

StlParser::StlSpecificationContext::StlSpecificationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

StlParser::AssertionContext* StlParser::StlSpecificationContext::assertion() {
  return getRuleContext<StlParser::AssertionContext>(0);
}

StlParser::SpecContext* StlParser::StlSpecificationContext::spec() {
  return getRuleContext<StlParser::SpecContext>(0);
}

std::vector<StlParser::DeclarationContext *> StlParser::StlSpecificationContext::declaration() {
  return getRuleContexts<StlParser::DeclarationContext>();
}

StlParser::DeclarationContext* StlParser::StlSpecificationContext::declaration(size_t i) {
  return getRuleContext<StlParser::DeclarationContext>(i);
}

std::vector<StlParser::AnnotationContext *> StlParser::StlSpecificationContext::annotation() {
  return getRuleContexts<StlParser::AnnotationContext>();
}

StlParser::AnnotationContext* StlParser::StlSpecificationContext::annotation(size_t i) {
  return getRuleContext<StlParser::AnnotationContext>(i);
}


size_t StlParser::StlSpecificationContext::getRuleIndex() const {
  return StlParser::RuleStlSpecification;
}


antlrcpp::Any StlParser::StlSpecificationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StlParserVisitor*>(visitor))
    return parserVisitor->visitStlSpecification(this);
  else
    return visitor->visitChildren(this);
}

StlParser::StlSpecificationContext* StlParser::stlSpecification() {
  StlSpecificationContext *_localctx = _tracker.createInstance<StlSpecificationContext>(_ctx, getState());
  enterRule(_localctx, 2, StlParser::RuleStlSpecification);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(44);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == StlParser::Specification) {
      setState(43);
      spec();
    }
    setState(50);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(48);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case StlParser::Input:
          case StlParser::Output:
          case StlParser::Constant:
          case StlParser::DomainTypeFloat:
          case StlParser::DomainTypeLong:
          case StlParser::DomainTypeComplex:
          case StlParser::DomainTypeInt:
          case StlParser::Identifier: {
            setState(46);
            declaration();
            break;
          }

          case StlParser::AT: {
            setState(47);
            annotation();
            break;
          }

        default:
          throw NoViableAltException(this);
        } 
      }
      setState(52);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
    setState(53);
    assertion();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SpecContext ------------------------------------------------------------------

StlParser::SpecContext::SpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t StlParser::SpecContext::getRuleIndex() const {
  return StlParser::RuleSpec;
}

void StlParser::SpecContext::copyFrom(SpecContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- SpecificationContext ------------------------------------------------------------------

tree::TerminalNode* StlParser::SpecificationContext::Specification() {
  return getToken(StlParser::Specification, 0);
}

tree::TerminalNode* StlParser::SpecificationContext::Identifier() {
  return getToken(StlParser::Identifier, 0);
}

StlParser::SpecificationContext::SpecificationContext(SpecContext *ctx) { copyFrom(ctx); }


antlrcpp::Any StlParser::SpecificationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StlParserVisitor*>(visitor))
    return parserVisitor->visitSpecification(this);
  else
    return visitor->visitChildren(this);
}
StlParser::SpecContext* StlParser::spec() {
  SpecContext *_localctx = _tracker.createInstance<SpecContext>(_ctx, getState());
  enterRule(_localctx, 4, StlParser::RuleSpec);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<SpecContext *>(_tracker.createInstance<StlParser::SpecificationContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(55);
    match(StlParser::Specification);
    setState(56);
    match(StlParser::Identifier);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssertionContext ------------------------------------------------------------------

StlParser::AssertionContext::AssertionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StlParser::AssertionContext::Identifier() {
  return getToken(StlParser::Identifier, 0);
}

tree::TerminalNode* StlParser::AssertionContext::EQUAL() {
  return getToken(StlParser::EQUAL, 0);
}

StlParser::TopExpressionContext* StlParser::AssertionContext::topExpression() {
  return getRuleContext<StlParser::TopExpressionContext>(0);
}


size_t StlParser::AssertionContext::getRuleIndex() const {
  return StlParser::RuleAssertion;
}


antlrcpp::Any StlParser::AssertionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StlParserVisitor*>(visitor))
    return parserVisitor->visitAssertion(this);
  else
    return visitor->visitChildren(this);
}

StlParser::AssertionContext* StlParser::assertion() {
  AssertionContext *_localctx = _tracker.createInstance<AssertionContext>(_ctx, getState());
  enterRule(_localctx, 6, StlParser::RuleAssertion);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    match(StlParser::Identifier);
    setState(59);
    match(StlParser::EQUAL);
    setState(60);
    topExpression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

StlParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t StlParser::DeclarationContext::getRuleIndex() const {
  return StlParser::RuleDeclaration;
}

void StlParser::DeclarationContext::copyFrom(DeclarationContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DeclVariableContext ------------------------------------------------------------------

StlParser::VariableDeclarationContext* StlParser::DeclVariableContext::variableDeclaration() {
  return getRuleContext<StlParser::VariableDeclarationContext>(0);
}

StlParser::DeclVariableContext::DeclVariableContext(DeclarationContext *ctx) { copyFrom(ctx); }


antlrcpp::Any StlParser::DeclVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StlParserVisitor*>(visitor))
    return parserVisitor->visitDeclVariable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DeclConstantContext ------------------------------------------------------------------

StlParser::ConstantDeclarationContext* StlParser::DeclConstantContext::constantDeclaration() {
  return getRuleContext<StlParser::ConstantDeclarationContext>(0);
}

StlParser::DeclConstantContext::DeclConstantContext(DeclarationContext *ctx) { copyFrom(ctx); }


antlrcpp::Any StlParser::DeclConstantContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StlParserVisitor*>(visitor))
    return parserVisitor->visitDeclConstant(this);
  else
    return visitor->visitChildren(this);
}
StlParser::DeclarationContext* StlParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 8, StlParser::RuleDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(64);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case StlParser::Input:
      case StlParser::Output:
      case StlParser::DomainTypeFloat:
      case StlParser::DomainTypeLong:
      case StlParser::DomainTypeComplex:
      case StlParser::DomainTypeInt:
      case StlParser::Identifier: {
        _localctx = dynamic_cast<DeclarationContext *>(_tracker.createInstance<StlParser::DeclVariableContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(62);
        variableDeclaration();
        break;
      }

      case StlParser::Constant: {
        _localctx = dynamic_cast<DeclarationContext *>(_tracker.createInstance<StlParser::DeclConstantContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(63);
        constantDeclaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AnnotationContext ------------------------------------------------------------------

StlParser::AnnotationContext::AnnotationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StlParser::AnnotationContext::AT() {
  return getToken(StlParser::AT, 0);
}

StlParser::Annotation_typeContext* StlParser::AnnotationContext::annotation_type() {
  return getRuleContext<StlParser::Annotation_typeContext>(0);
}


size_t StlParser::AnnotationContext::getRuleIndex() const {
  return StlParser::RuleAnnotation;
}


antlrcpp::Any StlParser::AnnotationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StlParserVisitor*>(visitor))
    return parserVisitor->visitAnnotation(this);
  else
    return visitor->visitChildren(this);
}

StlParser::AnnotationContext* StlParser::annotation() {
  AnnotationContext *_localctx = _tracker.createInstance<AnnotationContext>(_ctx, getState());
  enterRule(_localctx, 10, StlParser::RuleAnnotation);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(StlParser::AT);
    setState(67);
    annotation_type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Annotation_typeContext ------------------------------------------------------------------

StlParser::Annotation_typeContext::Annotation_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t StlParser::Annotation_typeContext::getRuleIndex() const {
  return StlParser::RuleAnnotation_type;
}

void StlParser::Annotation_typeContext::copyFrom(Annotation_typeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- RosTopicContext ------------------------------------------------------------------

tree::TerminalNode* StlParser::RosTopicContext::ROS_Topic() {
  return getToken(StlParser::ROS_Topic, 0);
}

tree::TerminalNode* StlParser::RosTopicContext::LPAREN() {
  return getToken(StlParser::LPAREN, 0);
}

std::vector<tree::TerminalNode *> StlParser::RosTopicContext::Identifier() {
  return getTokens(StlParser::Identifier);
}

tree::TerminalNode* StlParser::RosTopicContext::Identifier(size_t i) {
  return getToken(StlParser::Identifier, i);
}

tree::TerminalNode* StlParser::RosTopicContext::COMMA() {
  return getToken(StlParser::COMMA, 0);
}

tree::TerminalNode* StlParser::RosTopicContext::RPAREN() {
  return getToken(StlParser::RPAREN, 0);
}

StlParser::RosTopicContext::RosTopicContext(Annotation_typeContext *ctx) { copyFrom(ctx); }


antlrcpp::Any StlParser::RosTopicContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StlParserVisitor*>(visitor))
    return parserVisitor->visitRosTopic(this);
  else
    return visitor->visitChildren(this);
}
StlParser::Annotation_typeContext* StlParser::annotation_type() {
  Annotation_typeContext *_localctx = _tracker.createInstance<Annotation_typeContext>(_ctx, getState());
  enterRule(_localctx, 12, StlParser::RuleAnnotation_type);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<Annotation_typeContext *>(_tracker.createInstance<StlParser::RosTopicContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(69);
    match(StlParser::ROS_Topic);
    setState(70);
    match(StlParser::LPAREN);
    setState(71);
    match(StlParser::Identifier);
    setState(72);
    match(StlParser::COMMA);
    setState(73);
    match(StlParser::Identifier);
    setState(74);
    match(StlParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

StlParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

StlParser::DomainTypeContext* StlParser::VariableDeclarationContext::domainType() {
  return getRuleContext<StlParser::DomainTypeContext>(0);
}

tree::TerminalNode* StlParser::VariableDeclarationContext::Identifier() {
  return getToken(StlParser::Identifier, 0);
}

StlParser::IoTypeContext* StlParser::VariableDeclarationContext::ioType() {
  return getRuleContext<StlParser::IoTypeContext>(0);
}

StlParser::AssignmentContext* StlParser::VariableDeclarationContext::assignment() {
  return getRuleContext<StlParser::AssignmentContext>(0);
}


size_t StlParser::VariableDeclarationContext::getRuleIndex() const {
  return StlParser::RuleVariableDeclaration;
}


antlrcpp::Any StlParser::VariableDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StlParserVisitor*>(visitor))
    return parserVisitor->visitVariableDeclaration(this);
  else
    return visitor->visitChildren(this);
}

StlParser::VariableDeclarationContext* StlParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 14, StlParser::RuleVariableDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == StlParser::Input

    || _la == StlParser::Output) {
      setState(76);
      ioType();
    }
    setState(79);
    domainType();
    setState(80);
    match(StlParser::Identifier);
    setState(82);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == StlParser::EQUAL) {
      setState(81);
      assignment();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantDeclarationContext ------------------------------------------------------------------

StlParser::ConstantDeclarationContext::ConstantDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StlParser::ConstantDeclarationContext::Constant() {
  return getToken(StlParser::Constant, 0);
}

StlParser::DomainTypeContext* StlParser::ConstantDeclarationContext::domainType() {
  return getRuleContext<StlParser::DomainTypeContext>(0);
}

tree::TerminalNode* StlParser::ConstantDeclarationContext::Identifier() {
  return getToken(StlParser::Identifier, 0);
}

tree::TerminalNode* StlParser::ConstantDeclarationContext::EQUAL() {
  return getToken(StlParser::EQUAL, 0);
}

StlParser::LiteralContext* StlParser::ConstantDeclarationContext::literal() {
  return getRuleContext<StlParser::LiteralContext>(0);
}


size_t StlParser::ConstantDeclarationContext::getRuleIndex() const {
  return StlParser::RuleConstantDeclaration;
}


antlrcpp::Any StlParser::ConstantDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StlParserVisitor*>(visitor))
    return parserVisitor->visitConstantDeclaration(this);
  else
    return visitor->visitChildren(this);
}

StlParser::ConstantDeclarationContext* StlParser::constantDeclaration() {
  ConstantDeclarationContext *_localctx = _tracker.createInstance<ConstantDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 16, StlParser::RuleConstantDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84);
    match(StlParser::Constant);
    setState(85);
    domainType();
    setState(86);
    match(StlParser::Identifier);
    setState(87);
    match(StlParser::EQUAL);
    setState(88);
    literal();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

StlParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t StlParser::AssignmentContext::getRuleIndex() const {
  return StlParser::RuleAssignment;
}

void StlParser::AssignmentContext::copyFrom(AssignmentContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AsgnExprContext ------------------------------------------------------------------

tree::TerminalNode* StlParser::AsgnExprContext::EQUAL() {
  return getToken(StlParser::EQUAL, 0);
}

StlParser::ExpressionContext* StlParser::AsgnExprContext::expression() {
  return getRuleContext<StlParser::ExpressionContext>(0);
}

StlParser::AsgnExprContext::AsgnExprContext(AssignmentContext *ctx) { copyFrom(ctx); }


antlrcpp::Any StlParser::AsgnExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StlParserVisitor*>(visitor))
    return parserVisitor->visitAsgnExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AsgnLiteralContext ------------------------------------------------------------------

tree::TerminalNode* StlParser::AsgnLiteralContext::EQUAL() {
  return getToken(StlParser::EQUAL, 0);
}

StlParser::LiteralContext* StlParser::AsgnLiteralContext::literal() {
  return getRuleContext<StlParser::LiteralContext>(0);
}

StlParser::AsgnLiteralContext::AsgnLiteralContext(AssignmentContext *ctx) { copyFrom(ctx); }


antlrcpp::Any StlParser::AsgnLiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StlParserVisitor*>(visitor))
    return parserVisitor->visitAsgnLiteral(this);
  else
    return visitor->visitChildren(this);
}
StlParser::AssignmentContext* StlParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 18, StlParser::RuleAssignment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(94);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<AssignmentContext *>(_tracker.createInstance<StlParser::AsgnLiteralContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(90);
      match(StlParser::EQUAL);
      setState(91);
      literal();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<AssignmentContext *>(_tracker.createInstance<StlParser::AsgnExprContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(92);
      match(StlParser::EQUAL);
      setState(93);
      expression(0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DomainTypeContext ------------------------------------------------------------------

StlParser::DomainTypeContext::DomainTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StlParser::DomainTypeContext::DomainTypeFloat() {
  return getToken(StlParser::DomainTypeFloat, 0);
}

tree::TerminalNode* StlParser::DomainTypeContext::DomainTypeInt() {
  return getToken(StlParser::DomainTypeInt, 0);
}

tree::TerminalNode* StlParser::DomainTypeContext::DomainTypeLong() {
  return getToken(StlParser::DomainTypeLong, 0);
}

tree::TerminalNode* StlParser::DomainTypeContext::DomainTypeComplex() {
  return getToken(StlParser::DomainTypeComplex, 0);
}

tree::TerminalNode* StlParser::DomainTypeContext::Identifier() {
  return getToken(StlParser::Identifier, 0);
}


size_t StlParser::DomainTypeContext::getRuleIndex() const {
  return StlParser::RuleDomainType;
}


antlrcpp::Any StlParser::DomainTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StlParserVisitor*>(visitor))
    return parserVisitor->visitDomainType(this);
  else
    return visitor->visitChildren(this);
}

StlParser::DomainTypeContext* StlParser::domainType() {
  DomainTypeContext *_localctx = _tracker.createInstance<DomainTypeContext>(_ctx, getState());
  enterRule(_localctx, 20, StlParser::RuleDomainType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    _la = _input->LA(1);
    if (!(((((_la - 29) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 29)) & ((1ULL << (StlParser::DomainTypeFloat - 29))
      | (1ULL << (StlParser::DomainTypeLong - 29))
      | (1ULL << (StlParser::DomainTypeComplex - 29))
      | (1ULL << (StlParser::DomainTypeInt - 29))
      | (1ULL << (StlParser::Identifier - 29)))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IoTypeContext ------------------------------------------------------------------

StlParser::IoTypeContext::IoTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StlParser::IoTypeContext::Input() {
  return getToken(StlParser::Input, 0);
}

tree::TerminalNode* StlParser::IoTypeContext::Output() {
  return getToken(StlParser::Output, 0);
}


size_t StlParser::IoTypeContext::getRuleIndex() const {
  return StlParser::RuleIoType;
}


antlrcpp::Any StlParser::IoTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StlParserVisitor*>(visitor))
    return parserVisitor->visitIoType(this);
  else
    return visitor->visitChildren(this);
}

StlParser::IoTypeContext* StlParser::ioType() {
  IoTypeContext *_localctx = _tracker.createInstance<IoTypeContext>(_ctx, getState());
  enterRule(_localctx, 22, StlParser::RuleIoType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    _la = _input->LA(1);
    if (!(_la == StlParser::Input

    || _la == StlParser::Output)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IntervalContext ------------------------------------------------------------------

StlParser::IntervalContext::IntervalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StlParser::IntervalContext::LBRACK() {
  return getToken(StlParser::LBRACK, 0);
}

std::vector<StlParser::IntervalTimeContext *> StlParser::IntervalContext::intervalTime() {
  return getRuleContexts<StlParser::IntervalTimeContext>();
}

StlParser::IntervalTimeContext* StlParser::IntervalContext::intervalTime(size_t i) {
  return getRuleContext<StlParser::IntervalTimeContext>(i);
}

tree::TerminalNode* StlParser::IntervalContext::COLON() {
  return getToken(StlParser::COLON, 0);
}

tree::TerminalNode* StlParser::IntervalContext::RBRACK() {
  return getToken(StlParser::RBRACK, 0);
}


size_t StlParser::IntervalContext::getRuleIndex() const {
  return StlParser::RuleInterval;
}


antlrcpp::Any StlParser::IntervalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StlParserVisitor*>(visitor))
    return parserVisitor->visitInterval(this);
  else
    return visitor->visitChildren(this);
}

StlParser::IntervalContext* StlParser::interval() {
  IntervalContext *_localctx = _tracker.createInstance<IntervalContext>(_ctx, getState());
  enterRule(_localctx, 24, StlParser::RuleInterval);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    match(StlParser::LBRACK);
    setState(101);
    intervalTime();
    setState(102);
    match(StlParser::COLON);
    setState(103);
    intervalTime();
    setState(104);
    match(StlParser::RBRACK);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IntervalTimeContext ------------------------------------------------------------------

StlParser::IntervalTimeContext::IntervalTimeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t StlParser::IntervalTimeContext::getRuleIndex() const {
  return StlParser::RuleIntervalTime;
}

void StlParser::IntervalTimeContext::copyFrom(IntervalTimeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- IntervalTimeLiteralContext ------------------------------------------------------------------

StlParser::LiteralContext* StlParser::IntervalTimeLiteralContext::literal() {
  return getRuleContext<StlParser::LiteralContext>(0);
}

StlParser::UnitContext* StlParser::IntervalTimeLiteralContext::unit() {
  return getRuleContext<StlParser::UnitContext>(0);
}
